# haskell-draft-rust_bindings

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Setup.hs  haskrs.cabal
haskell_src/: HaskRs.hs
haskrs_rs/: Cargo.toml
rust_crate/: Cargo.toml
rust_crate/src/: lib.rs
src/: MyLib.hs
