cabal-version:      3.0
name:               haskrs
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Qqwy / Marten
maintainer:         w-m@wmcode.nl
-- copyright:
category:           Data
build-type:         Custom
extra-doc-files:    CHANGELOG.md
extra-source-files:
  -- We have Cargo settings in the root folder
  -- so 'cargo build', 'cargo test' etc
  -- can be ran from there
  ./Cargo.toml
  ./Cargo.lock
  -- Add all actual Rust crate files here:
  ./rust_crate/src/*.rs
  ./rust_crate/Cargo.toml

custom-setup
  setup-depends:
    , aeson
    , base
    , bytestring
    , Cabal ^>= 3.12
    , directory
    , filepath

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  HaskRs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

    -- By virtue of `Setup.hs` and the workspace Cargo.toml
    -- the nested crate will be compiled into `target/release`
    -- extra-lib-dirs: target/release
    extra-libraries: haskrs_rs
